--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules
 
 db.sqlite3
+
+#git init
+#git add .
+#git commit -m 'i have changed a file'
+#create a remote repo on Github
+#follow instructions from github
+
+#git push -u origin master
+#git push --set -upstream origin master'''fg'''
