--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development ./shoppingapp/frontend/src/index.js --output ./shoppingapp/frontend/static/main.js",
+    "build": "webpack --mode production ./shoppingapp/frontend/src/index.js --output ./shoppingapp/frontend/static/main.js"
   },
   "keywords": [],
   "author": "",
