--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-node_modules
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.txt
 
 db.sqlite3
-
-#git init
-#git add .
-#git commit -m 'i have changed a file'
-
-#git push -u origin master
-#git push --set -upstream origin master'''fg'''
