--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development ./shoppingapp/frontend/src/index.js --output ./shoppingapp/frontend/static/main.js",
-    "build": "webpack --mode production ./shoppingapp/frontend/src/index.js --output ./shoppingapp/frontend/static/main.js"
+    "dev": "webpack --mode development ./shoppingapp/frontend/src/index.js --output-path ./shoppingapp/frontend/static/main.js",
+    "build": "webpack --mode production ./shoppingapp/frontend/src/index.js --output-path ./shoppingapp/frontend/static/main.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
@@ -21,6 +22,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
